todo is implemented

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body
+{
+    background-color:  #eaeff1;
+    font-family: "Raleway", sans-serif;
+    margin: 0;
+    /* padding: 20px; */
+}
