--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="topnav">
-    <a [routerLink]="'/signup'" [routerLinkActiveOptions]={exact:true} [routerLinkActive]="'active'">Login</a>
-    <a  [routerLink]="'/dashboard'" [routerLinkActiveOptions]={exact:true} [routerLinkActive]="'active'">Dashboard</a>
+    <a  *ngIf="login" (click)="signout()"> Logout</a>
+    <a *ngIf="!login" [routerLink]="'/signup'" [routerLinkActiveOptions]={exact:true} [routerLinkActive]="'active'">Login</a>
+    <a *ngIf="login"  [routerLink]="'/dashboard'" [routerLinkActiveOptions]={exact:true} [routerLinkActive]="'active'">Dashboard</a>
     <a  [routerLink]="'/home'" [routerLinkActiveOptions]={exact:true} [routerLinkActive]="'active'">Home</a>
   </div>
