--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,58 +1,1 @@
-  <header class="header">
-        <nav class="navbar">
-            <a   class="nav-logo">BlogPost</a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                     <button class="nav-link" (click)="openPostMessage()">Post message</button>
-                </li>
-                <li class="nav-item">
-                     <button class="nav-link" (click)="deletaAll()">Delete all</button>
-                </li>
-                <li class="nav-item">
-                     <button class="nav-link" (click)="fetchAll()">Fetch All</button>
-                </li>
-            </ul>
-        </nav>
-</header>
-
-    <app-loader *ngIf="isLoading"></app-loader>
-    
-    <app-errors *ngIf="errorMessage" [errorMessage]="errorMessage"></app-errors>
-
-    <div class="empty" *ngIf="allposts.length===0 && !isLoading && !errorMessage">
-        No Message to display
-    </div>
-     
-
-<div class="general-box" *ngIf="!isLoading && !errorMessage">
-<div class="cards" *ngFor="let item of allposts">
-    <img src="https://qph.cf2.quoracdn.net/main-qimg-b49869393201bfecdb67f1dc030ede55-lq" alt="">
-    <div class="card-details">
-           <span class="tag">{{item.firstName}}</span> 
-           <span class="tag">{{item.country}}</span> 
-         
-           <div class="title">{{item.title}}</div>
-       <p>{{item.message}}</p>
-       <button class="s-button" (click)="seeDetails(item.id)">details</button>
-       <button class="d-button" (click)="deletePostMessage(item.id)">delete</button>
-       <button class="d-button" (click)="updateMessage(item.id)">update</button>
-        
-    </div>
-</div>
-</div>
-
-<app-card-details
-*ngIf="closingdetailtab"
-(closing)="closeingdetails($event)"
-[selectedDetails]="selectedDetails"
->
-</app-card-details>
-
-
-<app-details *ngIf="hideMessage" 
- (closeform)="closeform($event)"
- (formdata)=" postformdata($event)" 
- [changeFormat]="updateFormName" 
- [dataToUpdate]="dataToUpdate"
- >
-</app-details>
+ <router-outlet></router-outlet>
