--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -19,7 +19,7 @@ body {
 }
 
 .screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	background: linear-gradient(90deg, #17171a, #dbdaed);		
 	position: relative;	
 	height: 400px;
 	width: 360px;	
@@ -60,7 +60,7 @@ body {
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: #474554;	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -69,7 +69,7 @@ body {
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg, #4a4a4b, #000000);
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
